# guideclaw

./: .gitignore  README.md  package.json  pnpm-lock.yaml
apps/web/: .env.example  package.json
docs/: award-optimization-roadmap.md  final-demo-handoff.md  guideclaw-engineering-worksplit.md  guideclaw-implementation-plan.md  guideclaw-project-introduction.md  guideclaw-shared-contracts.md  poster-brief.md  repository-upload-checklist.md  video-script-3min.md
docs/diagrams/: guideclaw-collaboration-flow.mmd  guideclaw-oled-demo.mmd  guideclaw-openclaw-relationship.mmd  guideclaw-output-artifacts.mmd  guideclaw-overview.mmd  guideclaw-tech-architecture.mmd
openclaw/: README.md  install-and-integration.md  openclaw.config.template.yml  openclaw.env.example
scripts/: check-openclaw-env.sh  guideclaw_cli.py  install-guideclaw.sh
services/api/: .env.example  README.md  pyproject.toml
services/api/app/: __init__.py  main.py  ports.py  settings.py  store.py
services/api/app/api/: __init__.py
services/api/app/api/routes/: projects.py
services/api/app/domain/: __init__.py  schemas.py
services/api/app/services/: bohrium_client.py  knowledge_ingest.py  knowledge_search.py  openclaw_client.py  openrouter_client.py  research_workflow.py  result_summary.py
skills/guideclaw-gap-analyst/: README.md  SKILL.md
skills/guideclaw-literature-assistant/: README.md  SKILL.md
skills/guideclaw-meeting-secretary/: README.md  SKILL.md
skills/guideclaw-principal-investigator/: README.md  SKILL.md
skills/guideclaw-study-designer/: README.md  SKILL.md
(+24 files in other folders)
