[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "guideclaw-api"
version = "0.1.0"
description = "GuideClaw backend API skeleton"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.4,<3.0",
  "httpx>=0.28,<1.0",
  "python-multipart>=0.0.9,<1.0",
  "pypdf>=5.4,<6.0",
]

[tool.uvicorn]
factory = false

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
